--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,15 @@
         <dbcp.version>1.4</dbcp.version>
         <hibernate.ver>5.2.10.Final</hibernate.ver>
         <spring.version>4.3.9.RELEASE</spring.version>
-        <spring.jpa>2.0.8</spring.jpa>
+        <!--<spring.jpa>2.0.8</spring.jpa>-->
         <spring.data.version>1.11.6.RELEASE</spring.data.version>
         <java.version>1.8</java.version>
-        <jpa.version>1.0.0.Draft-16</jpa.version>
+        <!--<jpa.version>1.0.0.Draft-16</jpa.version>-->
         <hsql.version>2.4.0</hsql.version>
         <spring.security.version>4.2.3.RELEASE</spring.security.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <servlet.jstl.version>1.2</servlet.jstl.version>
+        <security.taglibs>4.2.3.RELEASE</security.taglibs>
         <jackson.version>2.9.0</jackson.version>
     </properties>
 
@@ -59,14 +60,19 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-jpa</artifactId>
-            <version>${spring.jpa}</version>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jpa</artifactId>
-            <version>${spring.data.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework</groupId>-->
+            <!--<artifactId>spring-jpa</artifactId>-->
+            <!--<version>${spring.jpa}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.data</groupId>-->
+            <!--<artifactId>spring-data-jpa</artifactId>-->
+            <!--<version>${spring.data.version}</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
@@ -77,10 +83,13 @@
             <artifactId>sqltool</artifactId>
             <version>${hsql.version}</version>
         </dependency>
+
+        <!--Spring Security-->
+
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${spring.security.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -92,6 +101,8 @@
             <artifactId>spring-security-web</artifactId>
             <version>${spring.security.version}</version>
         </dependency>
+
+        <!-- Plugins for view -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -101,6 +112,11 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>${servlet.jstl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${security.taglibs}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -121,6 +137,14 @@
 
     <build>
         <plugins>
+            <!-- maven-war-plugin с помощтю которого мы сможем отключить необходимость web.xml файла.(Но работал проект и без него!) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
