added Roles(user, admin). The login and registrations forms.

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -4,7 +4,7 @@ db.username=root
 db.password=root
 db.driver=com.mysql.jdbc.Driver
 db.dialect=org.hibernate.dialect.MySQL57Dialect
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=update
 current_session_context_class=thread
