--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.product.system</groupId>
+    <groupId>com.productEntity.system</groupId>
     <artifactId>ProductManagementSystem</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -16,7 +16,7 @@
         <hibernate.ver>5.2.10.Final</hibernate.ver>
         <spring.version>4.3.9.RELEASE</spring.version>
         <!--<spring.jpa>2.0.8</spring.jpa>-->
-        <spring.data.version>1.11.6.RELEASE</spring.data.version>
+        <!--<spring.data.version>1.11.6.RELEASE</spring.data.version>-->
         <java.version>1.8</java.version>
         <!--<jpa.version>1.0.0.Draft-16</jpa.version>-->
         <hsql.version>2.4.0</hsql.version>
@@ -28,7 +28,7 @@
         <junit4.test.version>4.12</junit4.test.version>
         <mockito.core.version>2.9.0</mockito.core.version>
         <spring.test.version>4.3.9.RELEASE</spring.test.version>
-        <spring.security.version>4.2.3.RELEASE</spring.security.version>
+
     </properties>
 
     <dependencies>
